# inmobilia-ai

./: .env.example  .gitignore  .safety-project.ini  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SETUP_HOOKS.md  main.py  pyproject.toml  requirements.txt
.githooks/: pre-commit  pre-commit.ps1
.github/workflows/: ci.yml  pr-check.yml
scripts/: __init__.py  format.py
src/: __init__.py
src/agents/: __init__.py  collector_agent.py  legal_agent.py  location_agent.py  preferences_agent.py  supervisor_agent.py
src/api/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/graphs/: __init__.py  inmobilia_graph.py  mvp_graph.py
src/models/: __init__.py  agent_state.py  api.py  enums.py  lead_data.py  validators.py
src/services/: __init__.py  analytics_client.py  lead_repository.py  recommendation_service.py
src/utils/: __init__.py  extractors.py  validators.py
tests/: __init__.py  test_extractors.py  test_validators.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: README.md
tests/unit_tests/models/: __init__.py  test_agent_state.py  test_api.py  test_enums.py  test_lead_data.py  test_validators.py
